fix GO! text vert align

--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,7 @@ li {
   display: inline-block;
   height: 30px;
   padding-left: 5px;
+  padding-top: 5px;
   border-radius: 5px;
   border: 1px solid grey;
   vertical-align: middle;
@@ -172,6 +173,7 @@ li {
   display: inline-block;
   height: 30px;
   padding-left: 5px;
+  padding-top: 6px;
   border-radius: 5px;
   border: 1px solid grey;
   vertical-align: middle;
